<resources>
    <string name="app_name">Food App</string>
    <string name="recipe">Recipe</string>
    <string name="favorite">Favorite</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="number_of_pages">50</string>

    <!-- Bottom Sheet -->
    <string name="meal_type">Meal Type</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="number">number</string>
    <string name="api_key">apiKey</string>
    <string name="type">type</string>
    <string name="diet">diet</string>
    <string name="addRecipeInformation">addRecipeInformation</string>
    <string name="fillIngredients">fillIngredients</string>
    <string name="search">Search</string>
    <string name="tools_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <!-- Detail Activity -->
    <string name="detail_title">Recipe Detail</string>
    <string name="over_view">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction">Instruction</string>
    <string name="detail">Detail</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy free</string>
    <string name="cheap">Cheap</string>
    <string name="recipe_saved">Recipe is saved !</string>
    <string name="recipe_unsaved">Recipe is unsaved !</string>

    <!-- Favorite Fragment -->
    <string name="favorite_title">Favorite Recipes</string>
    <string name="favorite_placeholder">You haven\'t saved any recipes\nLet find your recipe</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="remove_item_notify">Selected items have been removed!</string>
    <plurals name="item_selected">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>

    <!-- Meal plan Fragment -->
    <string name="add_saved_recipes">Add saved recipes</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="favorite_recipes">Favorite recipes</string>
    <string name="text_apply_button">Add %d recipes</string>
    <string name="choose_plan_dialog_title">Choose plan days</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="new_recipe">New recipes</string>

    <string-array name="days_of_week">
        <item name="monday">Monday</item>
        <item name="tuesday">Tuesday</item>
        <item name="wednesday">Wednesday</item>
        <item name="thursday">Thursday</item>
        <item name="friday">Friday</item>
        <item name="saturday">Saturday</item>
        <item name="sunday">Sunday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>