<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.recipe.RecipeBottomSheet">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_meal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/meal_type"
            android:textColor="@color/dark"
            android:textSize="@dimen/information_display_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/scroll_meal_type"
            android:layout_width="0dp"
            android:layout_height="@dimen/scroll_view_height"
            android:layout_marginHorizontal="@dimen/card_padding_vertical"
            android:layout_marginTop="@dimen/text_margin_horizontal"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_meal_type">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/mealType_chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:checkedChip="@+id/main_course_chip">

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/main_course_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/side_dish_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_dish" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/dessert_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/appetizer_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/salad_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salad" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/bread_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bread" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/breakfast_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/soup_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soup" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/beverage_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beverage" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/sauce_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sauce" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/marinade_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marinade" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/finger_food_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fingerfood" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/snack_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/drink_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drink" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_diet_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/diet_type"
            android:textColor="@color/dark"
            android:textSize="@dimen/information_display_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_meal_type" />

        <HorizontalScrollView
            android:id="@+id/scroll_diet_type"
            android:layout_width="0dp"
            android:layout_height="@dimen/scroll_view_height"
            android:layout_marginHorizontal="@dimen/card_padding_vertical"
            android:layout_marginTop="@dimen/text_margin_horizontal"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_diet_type">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/dietType_chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:checkedChip="@+id/gluten_free_chip">

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/gluten_free_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gluten_free" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/ketogenic_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ketogenic" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/vegetarian_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetarian" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/vegan_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegan" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/pescetarian_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pescetarian" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/paleo_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paleo" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/primal_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/primal" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/whole30_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whole30" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/apply"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_diet_type"
            app:rippleColor="@color/mediumGray" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>